# mailfox

./: .gitignore  README.md  chroma_test.ipynb  get_mail.py  pyproject.toml  test.ipynb
mailfox/: __main__.py  mailfox.py
mailfox/cli/: __init__.py  app.py  classifier.py  commands.py  config.py  credentials.py  database.py  run.py  wizard.py
mailfox/core/: auth.py  config_manager.py  database_manager.py  email_processor.py
mailfox/email_interface/: __init__.py  email_gen_ai.py  email_handler.py
mailfox/vector/: __init__.py  clustering.py  database.py  encoder.py
mailfox/vector/classifiers/: linear_svm.py  logistic_regression.py  mlp.py
testing_notebooks/: chat_gpt_classifier.ipynb  chroma_test.ipynb  email_handler_test.ipynb  full_test.ipynb
testing_notebooks/chroma_db/: chroma.sqlite3
